# GOIT_web_hw_13_part_2

./: .env  .gitignore  crud.py  db.py  docker-compose.yml  main.py  models.py  pyproject.toml  sql_app.sqlite
app/: auth.py  crud.py  db.py  dockerfile  main.py  models.py  requirements.txt  schemas.py  sql_app.sqlite
tests/: test_crud.py  test_routes.py
